# mutant_c

./: CMakeLists.txt  DESIGN  README.md
examples/: str_example.c  term_example.c
fancyreadline/: DESIGN  Makefile  fancyreadline.c
include/fancyrl/: fancyrl.h  posix_terminal.h
include/mutant/: base_class.h  curry_func.h  gc_allocator_class.h  string_class.h
libtermkey/: driver-csi.c
sexp_parse/: Makefile  NOTE  sexp_parse.c
src/: curry_func.c  gc_allocator_class.c  rope.c  string_class.c
src/fancyrl/: fancyrl.c  posix_terminal.c
